<resources>
    <string name="app_name">Pizarra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_erase">Borrar imagen</string>
    <string name="button_set_line_width">Establecer ancho de linea</string>
    <string name="button_set_color">Establecer color</string>
    <string name="line_imageview_description">Esto muestra el grosor de la línea</string>
    <string name="label_alpha">Alfa</string>
    <string name="label_red">Rojo</string>
    <string name="label_green">Verde</string>
    <string name="label_blue">Azul</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_delete">Borrar dibujo</string>
    <string name="menuitem_line_width">Ancho de línea</string>
    <string name="menuitem_save">Guardar</string>
    <string name="menuitem_print">Imprimir</string>
    <string name="message_erase">¿Borrar el dibujo?</string>
    <string name="message_error_saving">Hubo un error al guardar la imagen</string>
    <string name="message_saved">Su dibujo guardado se puede ver en la aplicación de Fotos</string>
    <string name="message_error_printing">Su dispositivo no admite la impresión</string>
    <string name="permission_explanation">Para guardar una imagen, la aplicación requiere permiso de almacenamiento</string>
    <string name="title_color_dialog">Elige el color</string>
    <string name="title_background_color_dialog">Choose Background Color</string>
    <string name="title_line_width_dialog">Elige el ancho de la línea</string>
    <string name="image">Image</string>
    <string name="title_activity_login_juan_alejandro">Login_JuanAlejandro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="textView_user">Usuario</string>
    <string name="textView_clave">Contraseña</string>
    <string name="editText_user">Ingrese el usuario</string>
    <string name="editText_clave">Ingrese la contraseña</string>
    <string name="button_ingresar">Ingresar</string>

    <string name="textView_user1">Usuario 1:</string>
    <string name="textView_user2">Usuario 2:</string>

    <string name="textView_clave1">Contraseña 1:</string>
    <string name="textView_clave2">Contraseña 2:</string>

    <string name="textView_getuser1">Juan</string>
    <string name="textView_getuser2">Mario</string>
    <string name="textView_getclave1">123</string>
    <string name="textView_getclave2">12345</string>



</resources>